# Robust-HOCBF-Safety-Filtering-for-Supercritical-Power-Plants-under-Model-Mismatch

./: .gitattributes  .gitignore  .repro-pack.yaml  AGENTS.md  ARTIFACT_MANIFEST.md  CITATION.cff  CLAUDE.md  DATA_AVAILABILITY.md  LICENSE  PHASE5_ASSETS.md  README.md  REPRODUCIBILITY.md  debug_epsilon_analysis.py  debug_gp_data.py  debug_robust_hocbf.py  requirements.txt  run_phase4.sh
code/: pyproject.toml  run_hocbf_baselines.sh  run_phase4.sh
code/configs/: phase1.yaml  phase3.yaml
code/envs/ccs/: __init__.py  agc_schedule.py  constraints.py  dynamics.py  (+1 more)
code/experiments/: coal_drift_diagnostic.py  compare_linear_nonlinear_v2.py  debug_qp_infeasible.py  debug_qp_trace.py  diag_comprehensive.py  diag_epsilon_config.py  diag_s2_full.py  e1_sparse_gp_n_sweep.py  e2_kappa_sweep.py  e3_sigma_floor_sweep.py  e4_perturbation_magnitude_sweep.py  k2_rhocbf_baseline.py  m3_sparse_gp_demo.py  mean_corrected_ratio.py  methods_5th.py  nonlinear_diagnosis.py  nonlinear_hocbf_vs_rhocbf.py  per_constraint_diff_sweep.py  per_constraint_differentiation.py  perturbation_ratio.py  plot_epsilon_shrinking.py  rerun_v3.py  run_5th_phi_scaled.py  run_5th_safety.py  run_lqr_rhocbf.py  run_rocbfnet_v2.py  s1_heat_validation.py  test_perturbation_scaling.py  test_phi_scaled.py  test_s6_qp.py  timevarying_symmetric_rerun.py  triple_integrator_experiment.py  verify_all_scenarios.py
code/scripts/: run_epsilon_remaining.sh
code/tests/: test_ccs_dynamics.py  test_diff_qp.py  test_integration.py  test_robust_hocbf.py  test_robust_hocbf_m3.py  test_robust_integration.py  test_safe_policy.py
(+1050 files in other folders)
